winfetch au update added

--- a/winfetch/v2.0.0-CHANGELOG.md
+++ b/winfetch/v2.0.0-CHANGELOG.md
@@ -1,14 +1,13 @@
-# Changelog
-## Fixed
+### Fixed
 * Fixed errors when using strict-mode
 * Fixed errors when using `-noimage`
 * Fixed issues with image processing especially for larger images
 * Fixed detailed help not showing
 
-## New Features
+### New Features
 * Improved terminal detection
 * Improved scoop pkgs speed
-* Disable unused package managers, use `-showpkgs <enabled pkgs>`
+* Disable unused package managers, use `-showpkgs [enabled pkgs]`
 * Change the order of info segments
 * Insert blank info lines
 * Hide the colorbar
@@ -27,7 +26,7 @@
 * The default config is now embedded within winfetch.ps1 and is generated automatically if your config doesn't exist
 * Added percentage bars to cpu, memory, disk and battery, they are configured similar to neofetch, for example, use `winfetch -cpustyle bar -diskstyle textbar`
 
-## New Info
+### New Info
 * kernel
 * resolution
 * motherboard
@@ -38,11 +37,12 @@
 * locale
 * theme
 
-## New Configuration
+
+### New Configuration
 We have also switched to a much more modular approach for info segments, this simplified the code and made it easier to add new info segments. This change also allows users to add custom info segments in their config. The [default config](https://github.com/lptstr/winfetch/blob/v2.0.0/winfetch.ps1#L205) has been updated, see the [configuration docs](https://github.com/lptstr/winfetch/wiki/Configuration) for more information.
 
 If you never used `winfetch -genconf` before then you should automatically be switched to the new config, otherwise, you can regenerate a new config with `winfetch -genconf`.
 Optionally, you can attempt to migrate your old configuration, this [commit](https://github.com/lptstr/winfetch/commit/5ec703568f9040a90af067ee69db3c9bc6a08253#diff-dcc6f40140e4baaca49d437e768c7f8b2dc1d58d6fcb4a27a1cb0f7473ffe5ff) may help.
 
-## Benchmarks
+### Benchmarks
 There have been many improvements to speed since `v1.2.0`. Comparing `v1.2.0` to `v2.0.0` with the same segments enabled `1500ms` -> `350ms` which is around a `4x` improvement. More details can be seen on the [winfetch vs neofetch](https://github.com/lptstr/winfetch/wiki/Winfetch-vs-Neofetch) benchmarks.
